package SystemPackage;

//!TODO Chargeur d'instance du jeu */
public class gameLoader extends SystemManager{
    
}
