package com.lado.app.Model.Tamagotchi;

public class Dog extends Tamagotchi {

  public Dog(String name) {
    super(name);
    this.breed = "Dog";
    this.favoriteFoods[0] = "Bone";
  }
}
